--- a/simple/index.html
+++ b/simple/index.html
@@ -14,15 +14,15 @@
 	<a id="github" href="https://github.com/Kaiyuan/donate-page" target="_blank" class="pos-f tr3" title="Github"></a>
 	<div id="DonateText" class="tr3">Sponsor</div>
 	<ul id="donateBox" class="list pos-f tr3">
-		<li id="PayPal"><a href="https://www.paypal.me/KaiyuanXie" target="_blank">PayPal</a></li>
-		<li id="BTC" data-footnote="Copy addres and show QRCod"><button id="BTCBn"  data-clipboard-target="#btc-key" alt="Copy to clipboard">Bitcoin</button></li>
+		<li id="BTC" data-footnote="地址将复制到剪切板"><button id="BTCBn"  data-clipboard-target="#btc-key" alt="Copy to clipboard">Bitcoin</button></li>
 		<li id="AliPay">AliPay</li>
 		<li id="WeChat">WeChat</li>
+		<li id="PayPal"><a href="https://www.paypal.com/paypalme/xiayuyan" target="_blank">PayPal</a></li>
 	</ul>
 	<div id="QRBox" class="pos-f left-100">
 		<div id="MainBox"></div>
 	</div>
 	<!-- Bitcoin 账号 -->
-	<input id="btc-key" type="text" value="14JkMR68n4PBASB3TgvpjtaPTbfffSwFbW" readonly="readonly">
+	<input id="btc-key" type="text" value="" readonly="readonly">
 </body>
 </html>
